Build and Style Website Header Section

--- a/main/index.html
+++ b/main/index.html
@@ -19,5 +19,8 @@
 </head>
 
 <body>
+    <header class="visually-hidden">
+        <h1 class="visually-hidden">Frontend Mentor | Credit Card Validation</h1>
+    </header>
 </body>
 </html>
