Build and Style Website Main Section pt.1
Author builds and gives style to :
1. Cards Container
2. Front Card Section

--- a/main/index.html
+++ b/main/index.html
@@ -22,5 +22,23 @@
     <header class="visually-hidden">
         <h1 class="visually-hidden">Frontend Mentor | Credit Card Validation</h1>
     </header>
+
+    <main class="app">
+        <section class="card__displayer">
+            <h2 class="visually-hidden">Card Displayer Section</h2>
+            <div class="card card_front">
+                <div class="mb-500">
+                    <img src="../images/card-logo.svg" alt="Credit Card Company Logo">
+                </div>
+                <div class="card__info">
+                    <h3 id="cardNum" class="card__number mb-200">0000 0000 0000 0000</h3>
+                    <p>
+                        <span id="cardHolder">Jane Appleseed</span>
+                        <span id="cardExpiry">00/0HHHH0</span>
+                    </p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
