Build and Style Website Main Section pt. 2
Author builds and gives style to Card Back Section

--- a/main/index.html
+++ b/main/index.html
@@ -38,6 +38,10 @@
                     </p>
                 </div>
             </div>
+
+            <div class="card card_back">
+                <img src="../images/bg-card-back.png" alt="Display of Credit Card's Backside">
+            </div>
         </section>
     </main>
 </body>
