Add CVC Number on the Backside of Credit Card
Author forgot to add CVC Number at the backside of the credit Card.

--- a/main/index.html
+++ b/main/index.html
@@ -41,6 +41,7 @@
 
             <div class="card card_back">
                 <img src="../images/bg-card-back.png" alt="Display of Credit Card's Backside">
+                <span class="card__cvc" id="cardCVC">000</span>
             </div>
         </section>
     </main>
