--- a/main/index.html
+++ b/main/index.html
@@ -44,6 +44,34 @@
                 <span class="card__cvc" id="cardCVC">000</span>
             </div>
         </section>
+        <form class="form">
+            <fieldset class="inputs__container">
+                <div class="input__area">
+                    <label for="in-holderName">Cardholder Name</label>
+                    <input type="text" id="in-holderName" name="Cardholder Name" placeholder="e.g. Jane Appleseed">
+                    <small class="error-message">Wrong format, texts only</small>
+                </div>
+                <div class="input__area">
+                    <label for="in-cardNumber">Card Number</label>
+                    <input type="text" id="in-cardNumber" name="Card Number" placeholder="e.g. 1234 5678 9123 0000">
+                    <small class="error-message">Wrong format, numbers only</small>
+                </div>
+                <div class="input__area_group mb-100">
+                    <div class="input__area">
+                        <label for="in-cardExpiryMonth">Exp. Date (MM/YY)</label>
+                        <input type="number" id="in-cardExpiryMonth" name="Month" min="0" max="12" placeholder="MM">
+                        <input type="number" id="in-cardExpiryYear" name="Year" min="22" max="99" placeholder="YY">
+                        <small class="error-message">Can't be blank</small>
+                    </div>
+                    <div class="input__area">
+                        <label for="in-cardCVC">CVC</label>
+                        <input type="number" id="in-cardCVC" name="cvc" placeholder="e.g. 123">
+                        <small class="error-message">Can't be blank</small>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-submit">Confirm</button>
+            </fieldset>
+        </form>
     </main>
 </body>
 </html>
