Give Element's IDs and Declaration of Variables pt.2

--- a/main/index.html
+++ b/main/index.html
@@ -59,8 +59,8 @@
                 <div class="input__area_group mb-100">
                     <div class="input__area">
                         <label for="in-cardExpiryMonth">Exp. Date (MM/YY)</label>
-                        <input type="text" id="in-cardExpiryMonth" name="Month" min="0" max="12" placeholder="MM" maxlength="2">
-                        <input type="text" id="in-cardExpiryYear" name="Year" min="22" max="99" placeholder="YY" maxlength="2">
+                        <input type="text" id="in-cardExpiryMonth" name="Month" placeholder="MM" maxlength="2">
+                        <input type="text" id="in-cardExpiryYear" name="Year" placeholder="YY" maxlength="2">
                         <small class="error-message">Can't be blank</small>
                     </div>
                     <div class="input__area">
@@ -69,7 +69,7 @@
                         <small class="error-message">Can't be blank</small>
                     </div>
                 </div>
-                <button id="submitBtn" type="submit" class="btn btn-submit">Confirm</button>
+                <button id="submitBtn" type="submit" class="btn btn-submit" disabled>Confirm</button>
             </fieldset>
         </form>
     </main>
