--- a/main/index.html
+++ b/main/index.html
@@ -34,7 +34,9 @@
                     <h3 id="cardNum" class="card__number mb-200">0000 0000 0000 0000</h3>
                     <p>
                         <span id="cardHolder">Jane Appleseed</span>
-                        <span id="cardExpiry">00/0HHHH0</span>
+                        <span>
+                            <span id="cardExpiryMonth">00</span>/<span id="cardExpiryYear">0HHHH0</span>
+                        </span>
                     </p>
                 </div>
             </div>
