--- a/main/index.html
+++ b/main/index.html
@@ -42,12 +42,11 @@
             </div>
 
             <div class="card card_back">
-                <img src="../images/bg-card-back.png" alt="Display of Credit Card's Backside">
                 <span class="card__cvc" id="cardCVC">000</span>
             </div>
         </section>
         <form id="confirmationForm" class="form">
-            <fieldset class="inputs__container">
+            <fieldset id="id-inputsContainer" class="inputs__container">
                 <div class="input__area">
                     <label for="in-holderName">Cardholder Name</label>
                     <input type="text" id="in-holderName" name="Cardholder Name" placeholder="e.g. Jane Appleseed">
