--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500&display=swap" rel="stylesheet">    
     <!-- Favicon -->
-    <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
     <!-- Website Title -->
     <title>Frontend Mentor | Credit Card</title>
 </head>
@@ -28,7 +28,7 @@
             <h2 class="visually-hidden">Card Displayer Section</h2>
             <div class="card card_front">
                 <div class="mb-500">
-                    <img src="../images/card-logo.svg" alt="Credit Card Company Logo">
+                    <img src="images/card-logo.svg" alt="Credit Card Company Logo">
                 </div>
                 <div class="card__info">
                     <h3 id="cardNum" class="card__number mb-200">0000 0000 0000 0000</h3>
