--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <button id="submitBtn" type="submit" class="btn btn-submit" disabled>Confirm</button>
             </fieldset>
             <section id="id-thankyouContainer" class="thankyou__section visually-hidden">
-                <img src="../images/icon-complete.svg" alt="icon checklist" class="mb-200">
+                <img src="images/icon-complete.svg" alt="icon checklist" class="mb-200">
                 <h2 class="mb-100">Thank You!</h2>
                 <p class="mb-300">We've added your card details</p>
                 <button type="submit" class="btn btn-submit">Continue</button>
